--- a/index.html
+++ b/index.html
@@ -12,14 +12,28 @@
 
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Link para o Font Awesome (ícones) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
-    <div class="container">
-        <header>
+    <!-- Cabeçalho -->
+    <header class="header">
+        <div class="logo">
             <h1>K-Commit Generator</h1>
-        </header>
+        </div>
+        <div class="header-icons">
+            <button id="toggle-sound" class="icon-button" type="button" title="Alternar Som">
+                <i id="sound-icon" class="fas fa-volume-up"></i>
+            </button>
+            <button id="toggle-theme" class="icon-button" type="button" title="Alternar Tema">
+                <i id="theme-icon" class="fas fa-moon"></i>
+            </button>
+        </div>
+    </header>
 
+    <div class="container">
         <main>
             <form id="commit-form">
                 <!-- Tipo de Commit -->
@@ -61,12 +75,6 @@
                 <div class="buttons">
                     <button id="copy-btn" type="button">Copiar</button>
                     <button id="clear-btn" type="button">Limpar</button>
-                </div>
-
-                <!-- Botões de Preferências -->
-                <div class="preferences">
-                    <button id="toggle-sound" type="button">Desativar Som</button>
-                    <button id="toggle-theme" type="button">Alternar para Tema Claro</button>
                 </div>
             </form>
 
