✨ feat(header): adicionar atributos de acessibilidade aos botões de alternância de som e tema

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <h1>K-Commit Generator</h1>
         </div>
         <div class="header-icons">
-            <button id="toggle-sound" class="icon-button" type="button" title="Alternar Som">
-                <i id="sound-icon" class="fas fa-volume-up"></i>
+            <button id="toggle-sound" class="icon-button" type="button" aria-label="Ativar/Desativar Som">
+                <i id="sound-icon" class="fas fa-volume-up" aria-hidden="true"></i>
             </button>
-            <button id="toggle-theme" class="icon-button" type="button" title="Alternar Tema">
-                <i id="theme-icon" class="fas fa-moon"></i>
+            <button id="toggle-theme" class="icon-button" type="button" aria-label="Alternar Tema">
+                <i id="theme-icon" class="fas fa-moon" aria-hidden="true"></i>
             </button>
         </div>
     </header>
