✨ feat(preview): atualizar ícones e mensagens para incluir emote de início de projeto

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <button id="toggle-theme" class="icon-button" type="button" aria-label="Alternar Tema">
                 <i id="theme-icon" class="fas fa-moon" aria-hidden="true"></i>
             </button>
+
         </div>
     </header>
 
@@ -39,7 +40,7 @@
                 <!-- Tipo de Commit -->
                 <div class="form-group">
                     <input type="text" id="tipo" placeholder="Tipo de Commit (e.g., feat, fix)" autocomplete="off">
-                    <span id="emote" class="emote">✨</span>
+                    <span id="emote" class="emote">🎉</span>
                     <ul id="dropdown" class="dropdown hidden"></ul>
                 </div>
 
@@ -81,7 +82,7 @@
             <!-- Pré-visualização -->
             <section id="preview-section">
                 <h2>Pré-visualização</h2>
-                <pre id="preview-text">✨ feat: Descrição breve</pre>
+                <pre id="preview-text">🎉 init: Primeiro commit</pre>
             </section>
         </main>
 
