✨ feat(input): adicionar contadores de caracteres para os campos de escopo e descrição

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             <button id="toggle-theme" class="icon-button" type="button" aria-label="Alternar Tema">
                 <i id="theme-icon" class="fas fa-moon" aria-hidden="true"></i>
             </button>
-
         </div>
     </header>
 
@@ -47,11 +46,13 @@
                 <!-- Escopo (Opcional) -->
                 <div class="form-group">
                     <input type="text" id="escopo" placeholder="Escopo (opcional)">
+                    <small id="escopo-counter" class="char-counter">0 caracteres</small>
                 </div>
 
                 <!-- Descrição -->
                 <div class="form-group">
                     <input type="text" id="descricao" placeholder="Descrição do Commit">
+                    <small id="descricao-counter" class="char-counter">0 caracteres</small>
                 </div>
 
                 <!-- Mensagem Adicional (Opcional) -->
