✨ feat(counter): adicionar limites e avisos para contadores de caracteres nos campos de escopo e descrição

--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@
                 <!-- Escopo (Opcional) -->
                 <div class="form-group">
                     <input type="text" id="escopo" placeholder="Escopo (opcional)">
-                    <small id="escopo-counter" class="char-counter">0 caracteres</small>
+                    <small id="escopo-counter" class="char-counter"
+                        title="Tente manter o escopo em até 50 caracteres.">0
+                        caracteres</small>
                 </div>
 
                 <!-- Descrição -->
                 <div class="form-group">
                     <input type="text" id="descricao" placeholder="Descrição do Commit">
-                    <small id="descricao-counter" class="char-counter">0 caracteres</small>
+                    <small id="descricao-counter" class="char-counter"
+                        title="Tente manter a descrição em até 72 caracteres.">0 caracteres</small>
                 </div>
 
                 <!-- Mensagem Adicional (Opcional) -->
