✨ feat(counter): ocultar e exibir contadores de caracteres nos campos de escopo e descrição

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <!-- Escopo (Opcional) -->
                 <div class="form-group">
                     <input type="text" id="escopo" placeholder="Escopo (opcional)">
-                    <small id="escopo-counter" class="char-counter"
+                    <small id="escopo-counter" class="char-counter hidden"
                         title="Tente manter o escopo em até 50 caracteres.">0
                         caracteres</small>
                 </div>
@@ -54,7 +54,7 @@
                 <!-- Descrição -->
                 <div class="form-group">
                     <input type="text" id="descricao" placeholder="Descrição do Commit">
-                    <small id="descricao-counter" class="char-counter"
+                    <small id="descricao-counter" class="char-counter hidden"
                         title="Tente manter a descrição em até 72 caracteres.">0 caracteres</small>
                 </div>
 
