✨ feat(preview): alternar entre visualização padrão e comando Git completo
Adiciona um botão para alternar entre a visualização padrão da mensagem de commit e a versão com o comando Git completo.

- Inclui lógica de alternância para a visualização no botão "Mostrar comando Git".
- Atualiza dinamicamente a pré-visualização com base no estado do botão.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
             <section id="preview-section">
                 <h2>Pré-visualização</h2>
                 <pre id="preview-text">🎉 init: Primeiro commit</pre>
+                <div class="view-toggle">
+                    <button id="toggle-view-btn">Mostrar Comando Git</button>
+                </div>
             </section>
         </main>
 
