--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <h1>K-Commit Generator</h1>
         </div>
         <div class="header-icons">
+            <button id="open-emoji-modal" class="icon-button" title="Abrir Modal de Emojis">
+                <i id="emoji-icon" class="fas fa-smile" aria-hidden="true"></i>
+            </button>
             <button id="toggle-sound" class="icon-button" type="button" aria-label="Ativar/Desativar Som">
                 <i id="sound-icon" class="fas fa-volume-up" aria-hidden="true"></i>
             </button>
@@ -94,6 +97,21 @@
                     <button id="toggle-view-btn">Mostrar Comando Git</button>
                 </div>
             </section>
+
+            <div id="emoji-modal" class="modal hidden">
+                <div class="modal-content">
+                    <span class="close-modal">&times;</span>
+                    <h3>Personalizar Emojis</h3>
+                    <div class="customization-form">
+                        <select id="type-selector" title="Selecione o tipo de commit">
+                            <!-- Opções serão carregadas dinamicamente pelo JavaScript -->
+                        </select>
+                        <input id="emoji-input" type="text" maxlength="2" placeholder="Digite um emoji">
+                        <button id="save-emoji" type="button">Salvar</button>
+                        <button id="reset-emojis" type="button">Redefinir Padrões</button>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <!-- JavaScript -->
