✨ feat(ui): adicionar campo para motivo de BREAKING CHANGE
Adicionado um campo de texto para especificar o motivo do BREAKING CHANGE quando o checkbox é marcado. A funcionalidade inclui:

- Exibição dinâmica do campo ao marcar o checkbox.
- Atualização automática da pré-visualização com o motivo digitado.
- Remoção do campo e do texto associado ao desmarcar o checkbox.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                         <span>BREAKING CHANGE</span>
                     </label>
                 </div>
+                <div class="form-group hidden" id="breaking-reason-group">
+                    <textarea id="breaking-reason" placeholder="Explique o motivo do Breaking Change"
+                        aria-describedby="breaking-reason-desc"></textarea>
+                    <small id="breaking-reason-desc" class="sr-only">Descreva o motivo do Breaking Change.</small>
+                </div>
 
                 <!-- Botões -->
                 <div class="buttons">
