✨ feat: Adicionar funcionalidade de toasts
- Implementa um container de toasts para exibir mensagens de feedback.
- Adiciona estilos para diferentes tipos de toasts (sucesso, erro, informação, aviso).
- Inclui animações para exibir e ocultar os toasts.
- Adiciona função `showToast` para criar e gerenciar toasts.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                 </div>
             </section>
 
+            <div id="toast-container" class="toast-container"></div>
+
             <div id="emoji-modal" class="modal hidden" aria-hidden="true" role="dialog"
                 aria-labelledby="emoji-modal-title">
                 <div class="modal-content">
