--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </main>
 
         <!-- JavaScript -->
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
     </div>
 </body>
 
