♻️ refactor: Adicionar tipo de botão ao botão de alternância de visualização

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                 <h2>Pré-visualização</h2>
                 <pre id="preview-text" aria-live="polite">🎉 init: Primeiro commit</pre>
                 <div class="view-toggle">
-                    <button id="toggle-view-btn" aria-label="Mostrar Comando Git">Mostrar Comando Git</button>
+                    <button id="toggle-view-btn" type="button" aria-label="Mostrar Comando Git">Mostrar Comando
+                        Git</button>
                 </div>
             </section>
 
